--- a/app/src/main/res/layout-land/activity_info.xml
+++ b/app/src/main/res/layout-land/activity_info.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InfoActivity">
+    tools:context=".InfoActivity"
+    android:background="@color/black">
 
-    <ImageView
+<ImageView
         android:id="@+id/ivPosterInfo"
         android:layout_width="280dp"
         android:layout_height="match_parent"
@@ -23,7 +23,9 @@
         android:layout_height="43dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:textStyle="bold"
         android:layout_marginStart="10dp"
+        android:textColor="@color/white"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="10dp"
         android:layout_toEndOf="@+id/ivPosterInfo"
@@ -41,6 +43,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="90dp"
         android:layout_toEndOf="@+id/ivPosterInfo"
+        android:progressTint="@color/golden"
+        android:secondaryProgressTint="@color/golden"
         android:numStars="5" />
 
     <TextView
@@ -51,6 +55,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/white"
         android:layout_marginEnd="32dp"
         android:layout_toEndOf="@+id/ivPosterInfo"
         android:textAlignment="center"
@@ -66,6 +71,7 @@
         android:layout_toEndOf="@+id/ivPosterInfo"
         android:text="Popularity: 9.3"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
         tools:text="Popularity: 9.3" />
