--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="0dp"
-    tools:context=".InfoActivity">
+    tools:context=".InfoActivity"
+    android:background="@color/black">
 
-    <ImageView
+<ImageView
         android:id="@+id/ivPosterInfo"
         android:layout_width="wrap_content"
         android:layout_height="250dp"
@@ -27,7 +28,9 @@
         android:layout_below="@+id/ivPosterInfo"
         android:layout_marginTop="15dp"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textSize="24sp"
+        android:textColor="@color/white"
         tools:text="Bloodshot" />
 
     <RatingBar
@@ -40,7 +43,10 @@
         android:layout_marginStart="85dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="85dp"
-        android:numStars="5" />
+        android:numStars="5"
+        android:progressTint="@color/golden"
+        android:secondaryProgressTint="@color/golden"
+        />
 
     <TextView
         android:id="@+id/tvOverviewInfo"
@@ -51,6 +57,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/white"
         android:layout_marginEnd="30dp"
         android:text="TextView"
         android:textAlignment="center"
@@ -64,6 +71,7 @@
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textSize="14sp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         tools:text="Popularity: 9.3" />
 
