--- a/app/src/main/res/layout-land/activity_info.xml
+++ b/app/src/main/res/layout-land/activity_info.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InfoActivity"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:id="@+id/root">
 
 <ImageView
         android:id="@+id/ivPosterInfo"
