--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:layout_marginTop="0dp"
     tools:context=".InfoActivity"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:id="@+id/root">
 
-<ImageView
+    <ImageView
         android:id="@+id/ivPosterInfo"
         android:layout_width="wrap_content"
         android:layout_height="250dp"
