--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -47,6 +47,7 @@
         android:numStars="5"
         android:progressTint="@color/golden"
         android:secondaryProgressTint="@color/golden"
+        android:progressBackgroundTint="@color/grey"
         />
 
     <TextView
