--- a/app/src/main/res/layout-land/activity_info.xml
+++ b/app/src/main/res/layout-land/activity_info.xml
@@ -78,4 +78,17 @@
         android:textStyle="bold"
         tools:text="Popularity: 9.3" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/ivPosterInfo"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="50dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="40dp"
+        app:srcCompat="@drawable/ic_play" />
+
 </RelativeLayout>
