--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="golden">#D7FFE37D</color>
     <color name="grey">#B9D3CDCC</color>
+    <color name="shinyGolden">#FFEE2D</color>
 </resources>
