--- a/app/src/main/res/menu/info_menu.xml
+++ b/app/src/main/res/menu/info_menu.xml
@@ -5,14 +5,12 @@
     <item android:id="@+id/btAdd"
         android:icon="@drawable/ic_add"
         android:title="Add"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.widget.ImageView"
+        app:showAsAction="always"
         />
 
     <item android:id="@+id/btLibrary"
         android:icon="@drawable/ic_saved"
         android:title="Library"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.widget.ImageView"
+        app:showAsAction="always"
         />
 </menu>
