--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="golden">#D7FFE37D</color>
     <color name="grey">#B9D3CDCC</color>
     <color name="shinyGolden">#FFEE2D</color>
+    <color name="orange">#F99E4C</color>
+    <color name="purple">#3C1C2D</color>
 </resources>
